--- a/wind-web/pom.xml
+++ b/wind-web/pom.xml
@@ -5,18 +5,18 @@
     <parent>
         <groupId>io.github.ramerf</groupId>
         <artifactId>wind</artifactId>
-        <version>4.0.5-SNAPSHOT</version>
+        <version>4.0.5</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>wind-web</artifactId>
     <name>wind-web</name>
-    <version>4.0.5-SNAPSHOT</version>
+    <version>4.0.5</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid.version>1.1.22</druid.version>
-        <wind.version>4.0.5-SNAPSHOT</wind.version>
+        <wind.version>4.0.5</wind.version>
         <lombok.version>1.18.10</lombok.version>
         <postgresql.version>42.2.18</postgresql.version>
         <springfox-swagger.version>2.9.2</springfox-swagger.version>
