--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
     <packaging>pom</packaging>
 
     <groupId>io.github.ramerf</groupId>
-    <artifactId>wind</artifactId>
-    <name>wind</name>
-    <version>4.0.6</version>
+    <artifactId>wind-parent</artifactId>
+    <name>wind-parent</name>
+    <version>4.0.7</version>
     <modules>
         <module>wind-core</module>
         <module>wind-web</module>
+        <module>wind</module>
     </modules>
     <url>http://maven.apache.org</url>
     <description>springboot web at once.</description>
