--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>wind</artifactId>
+        <artifactId>wind-parent</artifactId>
         <groupId>io.github.ramerf</groupId>
-        <version>4.0.6</version>
+        <version>4.0.7</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>wind-core</artifactId>
     <name>wind-core</name>
-    <version>4.0.6</version>
+    <version>4.0.7</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <postgresql.version>42.2.18</postgresql.version>
