--- a/.github/workflows/SyncToGitee.yml
+++ b/.github/workflows/SyncToGitee.yml
@@ -2,7 +2,7 @@ name: Sync Github Repos To Gitee
 on: push
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Sync Github Repos To Gitee #名字随便起
         uses: Yikun/hub-mirror-action@v1.0 #使用Yikun开发的hub-mirror-action
