--- a/.github/workflows/SyncToGithub.yml
+++ b/.github/workflows/SyncToGithub.yml
@@ -1,5 +1,9 @@
 name: Sync Gitee Repos To Github
-on: push
+on:
+  schedule:
+    - cron: '*/5 * * * *'
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
