--- a/.github/workflows/SyncToGithub.yml
+++ b/.github/workflows/SyncToGithub.yml
@@ -1,7 +1,7 @@
 name: Sync Gitee Repos To Github
 on:
   schedule:
-    - cron: '0-59 * * * *'
+    - cron: '0/5 * * * *'
     branches:
       - master
 jobs:
